# ballot_box

./: .coverage  .dockerignore  .gitignore  Dockerfile  README.md  config.py  constants.py  exceptions.py  main.py  pyproject.toml  requirements.txt  sanitize.py
ai/: __init__.py  gemini.py
api/: __init__.py  middleware.py  routes.py
data/: election_process.json  glossary.json
services/: __init__.py  cache.py  error_reporting.py  google_cloud.py
static/: app.js  index.html  styles.css
tests/: __init__.py  conftest.py  test_ai.py  test_api.py  test_cache.py  test_config.py  test_constants.py  test_error_reporting.py  test_exceptions.py  test_google_cloud.py  test_middleware.py  test_sanitize.py  test_security.py
